--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>james hawkins</title>
-      <meta name="description" content="james hawkins - developer"/>
+      <title>Lolohannsen</title>
+      <meta name="description" content="Marc Strub - Divine Madness"/>
       <link href="./assets/styles/style.css" rel="stylesheet">
    </head>
 
@@ -12,11 +12,11 @@
       <div class="flex-container">
          <div class="row">
             <div class="flex-item">
-               <h1>james hawkins</h1>
-               <p>it manager <span class="hl">@</span> shockbyte</p>
+               <h1>marc Strub</h1>
+               <p>it/ot/is manager <span class="hl">@</span> shockbyte</p>
 
-               <span class="link"><a>discord: james.hawkins</a></span><span class="dot"></span>
-               <span class="link"><a href="https://github.com/JamesHawkinss" target="_blank">github</a></span>
+               <span class="link"><a>discord: state#8564 </a></span><span class="dot"></span>
+               <span class="link"><a href="https://github.com/mostrub" target="_blank">github</a></span>
             </div>
          </div>
       </div>
